src/project/manifest/snapshots/pixi__project__manifest__document__tests__test_add_environment_pyproject.toml.snap
---
source: src/project/manifest/document.rs
assertion_line: 583
expression: source.to_string()
---
[tool.pixi.environments]
foo = []
bar = ["not-default"]
baz = { features = ["default"], solve-group = "group1" }
foobar = { features = ["default"], solve-group = "group1", no-default-features = true }
barfoo = { features = ["default"], no-default-features = true }
